--- a/src/app/avmainwindow.ui
+++ b/src/app/avmainwindow.ui
@@ -43,15 +43,18 @@
     </item>
     <item>
      <widget class="QScrollArea" name="scrollArea">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="minimumSize">
        <size>
-        <width>231</width>
+        <width>0</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>231</width>
+        <width>0</width>
         <height>16777215</height>
        </size>
       </property>
@@ -72,8 +75,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>237</width>
-         <height>944</height>
+         <width>268</width>
+         <height>952</height>
         </rect>
        </property>
        <property name="maximumSize">
@@ -129,7 +132,7 @@
            <item>
             <widget class="QCheckBox" name="checkBox_vertexColors">
              <property name="enabled">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <property name="maximumSize">
               <size>
@@ -1777,6 +1780,12 @@
          </spacer>
         </item>
        </layout>
+       <zorder>groupBox_rotation</zorder>
+       <zorder>groupBox_lights</zorder>
+       <zorder>groupBox_lighting</zorder>
+       <zorder>groupBox_enhancements</zorder>
+       <zorder>groupBox_annotations</zorder>
+       <zorder>groupBox_information</zorder>
       </widget>
      </widget>
     </item>
@@ -1788,7 +1797,7 @@
      <x>0</x>
      <y>0</y>
      <width>1496</width>
-     <height>26</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="locale">
